src/objects/Component_Movement_line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Component_Movement_Table__c</fullName>
        <label>Component Movement Table</label>
        <referenceTo>Component_Movement_Table__c</referenceTo>
        <relationshipLabel>Component Movement line Items</relationshipLabel>
        <relationshipName>Component_Movement_line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component_discount__c</fullName>
        <label>Component discount</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Misc_Component_Charges__c</fullName>
        <label>Misc Component Charges</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <formula>Quantity__c  *  Stock_Transfer_Price_Unit__c - Quantity__c  *  Stock_Transfer_Price_Unit__c*Component_discount__c +  Misc_Component_Charges__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>TEXT(Select_Component__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Select_Component__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Select_Component_Code__c</fullName>
        <formula>Select_Component__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Component Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select Component</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Component Movement line Items</relationshipLabel>
        <relationshipName>Component_Movement_line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Assigned__c</fullName>
        <formula>Component_Movement_Table__r.Service_Engineer_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineer Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Transfer_Price_Unit__c</fullName>
        <label>Stock Transfer Price / Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Net_Amount__c  +  VAT_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <formula>Net_Amount__c  *  VAT_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Percent__c</fullName>
        <label>VAT Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Component Movement line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TLID-{0000000}</displayFormat>
        <label>Component Movement line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Movement line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>